--- a/ToDoByMySelf/sinamaBileti/style.css
+++ b/ToDoByMySelf/sinamaBileti/style.css
@@ -16,6 +16,27 @@
     background-color: rgb(122, 122, 122);
     cursor : default;
 }
+.unReserved{
+    background-color: rgb(224, 28, 162);
+    cursor : pointer;
+}
+.unReserved:hover{
+    transform: scale(1.3);
+    animation: shake 0.5s;
+    
+}
+@keyframes shake {
+  0%   { transform: translateX(0); }
+  10%   { transform: translateY(0); }
+  20%  { transform: translateX(-5px); }
+  30%  { transform: translateY(-5px); }
+  40%  { transform: translateX(5px); }
+  50%  { transform: translateY(5px); }
+  60%  { transform: translateX(-5px); }
+  70%  { transform: translateY(-5px); }
+  80% { transform: translateX(0); }
+  100% { transform: translateY(0); }
+}
 .selected{
     background-color: chocolate;
 }
@@ -28,3 +49,7 @@
     box-shadow: 0px 0px 4px 0px white
 
 }
+#movies{
+    background-color: rgb(183, 139, 7);
+}
+
